Added the web search for values stored in the shared preferences

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pixelarts.week2day2classexercise">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".SaveActivity" />
-        <activity android:name=".QueryActivity"></activity>
+        <activity android:name=".QueryActivity" />
+        <activity
+            android:name=".WebActivity"
+            android:label="@string/title_activity_web"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.pixelarts.week2day2classexercise.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
